--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -1,21 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "React Zoom",
+  "name": "React Zoom Sample",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "zoom.ico",
+      "sizes": "32x32",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "Resources-ZoomClient.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "117x114"
     },
     {
-      "src": "logo512.png",
+      "src": "Zoom_logo.svg",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "114x26"
     }
   ],
   "start_url": ".",
