--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "@zoomus/websdk": "^2.8.0",
     "dotenv": "^16.0.3",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
